fix menu hover visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 /* @import url("https://fonts.googleapis.com/css?family=Arvo:700|Open+Sans"); */
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Nunito:300,400,700,800&display=swap");
+
 html {
   overflow-x: hidden;
 }
@@ -21,7 +22,10 @@ body {
   overflow-x: hidden;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   font-size: 38px;
   color: #222222;
   font-weight: 700;
@@ -50,13 +54,15 @@ p {
   font-size: 14px;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: outside none none;
   margin: 0;
   padding: 0;
 }
 
-ul li, ol li {
+ul li,
+ol li {
   list-style: none;
 }
 
@@ -186,7 +192,8 @@ button:focus {
   outline: none !important;
 }
 
-.icon-close, .icon-check {
+.icon-close,
+.icon-check {
   color: #F63854;
 }
 
@@ -257,7 +264,8 @@ a.back-to-top i {
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
 }
 
-a.back-to-top:hover, a.back-to-top:focus {
+a.back-to-top:hover,
+a.back-to-top:focus {
   text-decoration: none;
 }
 
@@ -281,7 +289,8 @@ a.back-to-top:hover, a.back-to-top:focus {
   margin: 0 auto;
 }
 
-#loader-1:before, #loader-1:after {
+#loader-1:before,
+#loader-1:after {
   content: "";
   position: absolute;
   top: -10px;
@@ -309,6 +318,7 @@ a.back-to-top:hover, a.back-to-top:focus {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
     -webkit-transform: rotate(360deg);
     -ms-transform: rotate(360deg);
@@ -491,7 +501,7 @@ hr {
   display: table;
 }
 
-.about-area .about-wrapper > div {
+.about-area .about-wrapper>div {
   vertical-align: middle;
   display: table-cell;
 }
@@ -531,19 +541,20 @@ hr {
 .top-nav-collapse .navbar-brand {
   top: 0px;
 }
+
 /* cambiar imagen cuando collapsa */
 .top-nav-collapse .navbar-brand img {
   width: 40%;
-  content:url("http://www.adhentux.com/assets/img/logo.png");
+  content: url("http://www.adhentux.com/assets/img/logo.png");
 }
 
 .brand-logo-blanco {
-  content:url("http://www.adhentux.com/assets/img/logo_blanco.png");
+  content: url("http://www.adhentux.com/assets/img/logo_blanco.png");
   width: 200px;
 }
 
 .brand-logo {
-  content:url("http://www.adhentux.com/assets/img/logo.png");
+  content: url("http://www.adhentux.com/assets/img/logo.png");
   width: 180px;
 }
 
@@ -555,12 +566,12 @@ hr {
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
   cursor: pointer;
-  color: #F63854 !important;
+  /*color: #F63854 !important;*/
   border-color: #F63854 !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
-  color: #F63854 !important;
+  /* color: #F63854 !important; */
 }
 
 .navbar-expand-md .navbar-toggler {
@@ -600,6 +611,7 @@ hr {
 .navbar-expand-md .navbar-nav .nav-item {
   padding-left: 25px;
 }
+
 /* acaaaa */
 .navbar-expand-md .navbar-nav .nav-link {
   color: #fff;
@@ -631,16 +643,16 @@ hr {
 }
 
 .navbar-expand-md .navbar-nav li a:hover,
-.navbar-expand-md .navbar-nav li .active > a,
+.navbar-expand-md .navbar-nav li .active>a,
 .navbar-expand-md .navbar-nav li a:focus {
   color: #fff;
   outline: none;
 }
 
-.navbar-expand-md .navbar-nav .active > .nav-link,
+.navbar-expand-md .navbar-nav .active>.nav-link,
 .navbar-expand-md .navbar-nav .nav-link.active,
 .navbar-expand-md .navbar-nav .nav-link.open,
-.navbar-expand-md .navbar-nav .open > .nav-link {
+.navbar-expand-md .navbar-nav .open>.nav-link {
   color: #fff !important;
   width: 100%;
   font-weight: 600;
@@ -649,7 +661,7 @@ hr {
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover::before,
 .navbar-expand-md .navbar-nav .nav-link:focus {
-  color: #F63854;
+  /* color: #F63854; */
   width: 100%;
   transition: width 1s;
   -webkit-transition: width 1s;
@@ -749,7 +761,8 @@ hr {
   background: #f7f7f7;
 }
 
-.dropdown-item.active, .dropdown-item:active {
+.dropdown-item.active,
+.dropdown-item:active {
   background: transparent;
 }
 
@@ -1221,7 +1234,9 @@ hr {
   -o-transition: all 0.4s ease-in-out;
 }
 
-.owl-carousel button.owl-dot.active span, .owl-carousel button.owl-dot.clickable, .owl-carousel button.owl-dot:hover span {
+.owl-carousel button.owl-dot.active span,
+.owl-carousel button.owl-dot.clickable,
+.owl-carousel button.owl-dot:hover span {
   background: #F63854;
 }
 
@@ -1276,7 +1291,8 @@ textarea {
   outline: none;
 }
 
-.btn.disabled, .btn:disabled {
+.btn.disabled,
+.btn:disabled {
   opacity: 1;
 }
 
@@ -1339,7 +1355,9 @@ textarea {
 
 /*cta
 */
-#cta{background: ;}
+#cta {
+  background: ;
+}
 
 /* Footer Area Start */
 .footer-area {
@@ -1493,87 +1511,101 @@ textarea {
   animation: square 25s infinite;
   transition-timing-function: linear;
 }
+
 .bg-bubbles li:nth-child(1) {
   left: 10%;
 }
+
 .bg-bubbles li:nth-child(2) {
   left: 20%;
   width: 80px;
   height: 80px;
   -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  animation-delay: 2s;
   -webkit-animation-duration: 17s;
-          animation-duration: 17s;
+  animation-duration: 17s;
 }
+
 .bg-bubbles li:nth-child(3) {
   left: 25%;
   -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  animation-delay: 4s;
 }
+
 .bg-bubbles li:nth-child(4) {
   left: 40%;
   width: 60px;
   height: 60px;
   -webkit-animation-duration: 22s;
-          animation-duration: 22s;
+  animation-duration: 22s;
   background-color: rgba(255, 255, 255, 0.25);
 }
+
 .bg-bubbles li:nth-child(5) {
   left: 70%;
 }
+
 .bg-bubbles li:nth-child(6) {
   left: 80%;
   width: 120px;
   height: 120px;
   -webkit-animation-delay: 3s;
-          animation-delay: 3s;
+  animation-delay: 3s;
   background-color: rgba(255, 255, 255, 0.2);
 }
+
 .bg-bubbles li:nth-child(7) {
   left: 32%;
   width: 160px;
   height: 160px;
   -webkit-animation-delay: 7s;
-          animation-delay: 7s;
+  animation-delay: 7s;
 }
+
 .bg-bubbles li:nth-child(8) {
   left: 55%;
   width: 20px;
   height: 20px;
   -webkit-animation-delay: 15s;
-          animation-delay: 15s;
+  animation-delay: 15s;
   -webkit-animation-duration: 40s;
-          animation-duration: 40s;
+  animation-duration: 40s;
 }
+
 .bg-bubbles li:nth-child(9) {
   left: 25%;
   width: 10px;
   height: 10px;
   -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  animation-delay: 2s;
   -webkit-animation-duration: 40s;
-          animation-duration: 40s;
+  animation-duration: 40s;
   background-color: rgba(255, 255, 255, 0.3);
 }
+
 .bg-bubbles li:nth-child(10) {
   left: 90%;
   width: 160px;
   height: 160px;
   -webkit-animation-delay: 11s;
-          animation-delay: 11s;
+  animation-delay: 11s;
 }
+
 @-webkit-keyframes square {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-700px) rotate(600deg);
   }
 }
+
 @keyframes square {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-700px) rotate(600deg);
   }
